--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
-		<title>Vite + React</title>
+		<title>Empoyee Accounting</title>
 	</head>
 	<body>
 		<div id="root"></div>
